--- a/index.html
+++ b/index.html
@@ -62,12 +62,29 @@
 </head>
 <body>
 <h1>Terraforming Mars Manager by Kami</h1>
-<audio id="backgroundMusic" src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/refs/heads/main/background-music.mp3" loop>
+<audio id="backgroundMusic" src="https://your-project-name.web.app/background-music.mp3" autoplay loop muted>
     Your browser does not support the audio element.
 </audio>
-<button id="startMusicButton" onclick="startMusic()">Start Music</button>
+<button id="unmuteButton" onclick="unmuteMusic()">Unmute Music</button>
 
 <script>
+    function unmuteMusic() {
+        const music = document.getElementById('backgroundMusic');
+        music.muted = false; // Unmute the audio
+        music.play().catch(error => {
+            console.log('Playback error:', error);
+        });
+    }
+
+    // Attempt to autoplay the music when the page loads
+    window.addEventListener('load', () => {
+        const music = document.getElementById('backgroundMusic');
+        music.play().catch(error => {
+            console.log('Autoplay prevented:', error);
+        });
+    });
+</script>
+
     function startMusic() {
         const music = document.getElementById('backgroundMusic');
         music.play().catch(error => {
