--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <h1>Terraforming Mars Manager by Kami</h1>
-<audio id="backgroundMusic" src="https://your-project-name.web.app/background-music.mp3" autoplay loop muted>
+<audio id="backgroundMusic" src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/refs/heads/main/background-music.mp3" autoplay loop muted>
     Your browser does not support the audio element.
 </audio>
 <button id="unmuteButton" onclick="unmuteMusic()">Unmute Music</button>
@@ -85,34 +85,6 @@
     });
 </script>
 
-    function startMusic() {
-        const music = document.getElementById('backgroundMusic');
-        music.play().catch(error => {
-            console.log('Playback error:', error);
-        });
-    }
-</script>
-<script>
-    function toggleMusic() {
-        const music = document.getElementById('backgroundMusic');
-        const button = document.getElementById('musicToggle');
-        if (music.paused) {
-            music.play();
-            button.innerText = 'Pause Music';
-        } else {
-            music.pause();
-            button.innerText = 'Play Music';
-        }
-    }
-
-    // Autoplay the music when the page loads
-    window.addEventListener('load', () => {
-        const music = document.getElementById('backgroundMusic');
-        music.play().catch(error => {
-            console.log('Autoplay prevented:', error);
-        });
-    });
-</script>
 <!-- Tag Tracker Table with All Tags -->
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
