--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <h1>Terraforming Mars Manager by Kami</h1>
-<audio id="backgroundMusic" src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/refs/heads/main/background-music.zip" autoplay loop muted>
+<audio id="backgroundMusic" src="https://voca.ro/14EZWylueMrc" autoplay loop muted>
     Your browser does not support the audio element.
 </audio>
 <button id="unmuteButton" onclick="unmuteMusic()">Unmute Music</button>
