--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 </style>
 </head>
 <body>
+<button onclick="window.location.href='resources.html'">Resources</button>
 <h1>Tag and VP Tracker</h1>
-<button onclick="window.location.href='destination.html'">Go to Another Page</button>
+<button onclick="window.location.href='destination.html'">History</button>
 
 <!-- Tag Tracker Table with All Tags -->
 <table>
