--- a/index.html
+++ b/index.html
@@ -122,8 +122,117 @@
     <button onclick="resetGameState()">Reset Game</button>
 </div>
      
-<h2>Resources</h2>
-     
+<h2>Standard Resources</h2>
+     <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terraforming Rating UI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background-color: #d3b89e;
+            padding: 20px;
+            border-radius: 10px;
+            width: 300px;
+            text-align: center;
+        }
+        .terraform-rating {
+            background-color: #e08b4d;
+            padding: 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .rating-value {
+            font-size: 24px;
+            margin: 10px 0;
+        }
+        .resource-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .resource {
+            background-color: #ffffff;
+            padding: 15px;
+            border-radius: 5px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .resource img {
+            width: 30px;
+            height: 30px;
+        }
+        .resource p {
+            margin: 5px 0 0 0;
+            font-size: 16px;
+        }
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .buttons button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="terraform-rating">
+            <p>Terraforming rating</p>
+            <div class="rating-value">20</div>
+            <div>
+                <span>-1</span> <span>+1</span>
+            </div>
+        </div>
+        <div class="resource-container">
+            <div class="resource">
+                <p>Coin</p>
+                <p>0</p>
+            </div>
+            <div class="resource">
+                <p>Steel</p>
+                <p>0</p>
+            </div>
+            <div class="resource">
+                <p>Star</p>
+                <p>0</p>
+            </div>
+            <div class="resource">
+                <p>Leaf</p>
+                <p>0</p>
+            </div>
+            <div class="resource">
+                <p>Energy</p>
+                <p>0</p>
+            </div>
+            <div class="resource">
+                <p>Heat</p>
+                <p>0</p>
+            </div>
+        </div>
+        <div class="buttons">
+            <button>Produce</button>
+            <button>Reset</button>
+        </div>
+    </div>
+</body>
+</html>
+
 <!-- Link to Rulebook -->
 <p>
      <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
