--- a/index.html
+++ b/index.html
@@ -123,7 +123,23 @@
 </div>
      
 <h2>Standard Resources</h2>
-
+<table id="resourceButtonsTable">
+    <tr>
+        <td><button>Energy</button></td>
+        <td><button>Heat</button></td>
+        <td><button>Plants</button></td>
+    </tr>
+    <tr>
+        <td><button>Steel</button></td>
+        <td><button>Terraform</button></td>
+        <td><button>Titanium</button></td>
+    </tr>
+    <tr>
+        <td><button>Credits</button></td>
+        <td><button>Building</button></td>
+        <td><button>Bonus</button></td>
+    </tr>
+</table>
 <!-- Link to Rulebook -->
 <p>
      <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
