--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
         font-weight: bold; /* Make numbers thicker */
         color: #ffffff; /* Ensure the numbers are visible */
     }
+     /* Styling for new resource buttons table */
+    #resourceButtonsTable {
+        width: 100%; 
+        max-width: 600px;
+        margin: 30px auto; 
+        border-collapse: collapse;
+        border: 2px solid #333;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    #resourceButtonsTable td {
+        padding: 20px;
+        border: 1px solid #444;
+    }
+    #resourceButtonsTable button {
+        width: 80px;
+        height: 80px;
+        background-color: #444;
+        color: #fff;
+        font-size: 1.2em;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+    #resourceButtonsTable button:hover {
+        background-color: #666;
+    }
 </style>
 </head>
 <body>
