--- a/index.html
+++ b/index.html
@@ -267,20 +267,20 @@
         loadGameState();
     });
 </script>
-  <!-- Personal Introduction Text Box -->
-<div id="personalIntro" class="justify-text" style="margin-top: 0px; padding: 20px; background: linear-gradient(45deg, rgba(255, 140, 0, 0.9), rgba(255, 165, 0, 0.9)); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6); border: 3px solid black;">
+    <!-- Personal Introduction Text Box -->
+<div id="personalIntro" style="margin-top: 0px; padding: 10px; background: rgba(239, 126, 55, 0.9); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); border: 3px solid black;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;">About Me and my app</h2>
     <p>Hi there Terraformers!<br> My name is Kami :)</p> 
     <p>As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. </p>
     <p>Originally, the main intention was (and still is) to track VPs and Tags, which are the two main reasons why we keep all the cards face up on the table. It can take a lot of space on the table, especially if you don't own a large boardgame table. With this app, you can simply stack your played cards and put them aside, not having to worry about their visibility all the time.</p>
     <p>This app also helps you manage resources (not implemented yet), track tags, VPs and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be! If you have any feedback, please contact me via killionaire23ttv@gmail.com. I'd love to hear from you!</p>
     <p>As a little something extra, here is a photo of the designer of Terraforming Mars/co-owner of Fryxgames Jacob Fryxelius and I, posing with a custom TM card I made for Spiel Essen in '24 for giggles. Before you ask, yes, while it was not my intention, he did insist on giving me a 50% off! What a lad!</p>
-</div>
 
 <!-- Personal Photo -->
 <div id="personalPhoto" style="margin-top: 50px;">
     <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 800px; height: auto; border-radius: 10px;">
 </div>
+
 
 
 
