--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     });
 </script>
     <!-- Personal Introduction Text Box -->
-<div id="personalIntro" style="margin-top: 0px; padding: 10px; background: rgba(245, 126, 55, 0.8); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
+<div id="personalIntro" style="margin-top: 0px; padding: 10px; background: linear-gradient(45deg, rgba(245, 126, 55, 0.8), rgba(0, 0, 0, 0.9)); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;">About Me and my app</h2>
     <p>Hi there Terraformers!<br> My name is Kami :)</p> 
     <p>As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. </p>
