--- a/index.html
+++ b/index.html
@@ -88,6 +88,66 @@
         font-weight: bold; /* Make numbers thicker */
         color: #ffffff; /* Ensure the numbers are visible */
     }
+
+     /* Styles for the Terraforming Rating and Resources Section */
+    .rating-container, .resources-container {
+        max-width: 800px;
+        margin: 20px auto;
+    }
+
+    /* Terraforming Rating Button */
+    .terraforming-button {
+        width: 100%;
+        padding: 20px;
+        font-size: 1.5em;
+        border: none;
+        background-color: #333;
+        color: white;
+        cursor: pointer;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    }
+
+    /* Container for the 3 equal-sized resource buttons */
+    .resources-row {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+    }
+
+    /* Individual Resource Button */
+    .resource-button {
+        flex: 1;
+        padding: 15px;
+        margin: 0 5px;
+        font-size: 1em;
+        background-color: #444;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        transition: background-color 0.3s ease;
+    }
+
+    /* Make the button stand out a bit when hovered */
+    .resource-button:hover {
+        background-color: #666;
+    }
+
+    /* Produce Button */
+    .produce-button {
+        width: 100%;
+        margin-top: 20px;
+        padding: 10px;
+        font-size: 1.2em;
+        border: none;
+        background-color: #333;
+        color: white;
+        cursor: pointer;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    }
 </style>
 </head>
 <body>
@@ -153,7 +213,28 @@
 </div>
      
 <h2>Standard Resources</h2>
+<h2>Standard Resources</h2>
+<!-- Terraforming Rating Section -->
+<div class="rating-container">
+    <button class="terraforming-button">Terraforming Rating</button>
+    
+    <!-- Resources Buttons - 2 Rows of 3 Buttons -->
+    <div class="resources-container">
+        <div class="resources-row">
+            <button class="resource-button">Resource 1</button>
+            <button class="resource-button">Resource 2</button>
+            <button class="resource-button">Resource 3</button>
+        </div>
+        <div class="resources-row">
+            <button class="resource-button">Resource 4</button>
+            <button class="resource-button">Resource 5</button>
+            <button class="resource-button">Resource 6</button>
+        </div>
+    </div>
 
+    <!-- Produce Button -->
+    <button class="produce-button">Produce</button>
+</div>
 <!-- Link to Rulebook -->
 <p>
      <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
