--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
 </head>
 <body>
 <h2>Standard Resources</h2>
-<!-- Terraforming Rating Section -->
-<div class="rating-container">
+     
+<!-- Resource Tracker Section with Background Box -->
+<div class="resource-tracker-box">
+    <!-- Terraforming Rating Button -->
     <button class="terraforming-button">Terraforming Rating</button>
     
     <!-- Resources Buttons - 2 Rows of 3 Buttons -->
