--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
     <!-- Resources Buttons - 2 Rows of 3 Buttons -->
     <div class="resources-container">
         <div class="resources-row">
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Credit.png" alt="Credit"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Steel.png" alt="Steel"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Titanium.png" alt="Titanium"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Credit.png" alt="Credit"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Steel.png" alt="Steel"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Titanium.png" alt="Titanium"></button>
         </div>
         <div class="resources-row">
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png" alt="Plant"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png" alt="Energy"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Heat.png" alt="Heat"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat"></button>
         </div>
     </div>
 
