--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         padding: 20px;
         font-size: 1.5em;
         border: none;
-        background-color: #333;
+        background-color: #e6e3e3;
         color: white;
         cursor: pointer;
         border-radius: 10px;
@@ -152,7 +152,7 @@
         padding: 10px;
         font-size: 1.2em;
         border: none;
-        background-color: #333;
+        background-color: #e6e3e3;
         color: white;
         cursor: pointer;
         border-radius: 10px;
