--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         font-size: 1.5em;
         border: none;
         background-color: #e6e3e3;
-        color: white;
+        color: black;
         cursor: pointer;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -132,7 +132,7 @@
         margin: 0 5px;
         font-size: 1em;
         background-color: #e6e3e3;
-        color: white;
+        color: black;
         border: none;
         border-radius: 10px;
         cursor: pointer;
@@ -153,7 +153,7 @@
         font-size: 1.2em;
         border: none;
         background-color: #e6e3e3;
-        color: white;
+        color: black;
         cursor: pointer;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
