--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         max-width: 800px;
         margin: 20px auto;
         padding: 20px;
+        border: 3px dashed #fff;
         background-image: url('https://killionaire23.github.io/TMMobile/ResourceBackground.jpg');
         background-size: cover; /* Ensure the image covers the entire box */
         background-repeat: no-repeat;
