--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         max-width: 800px;
         margin: 20px auto;
         padding: 20px;
-        border: 10px solid #000000;
+        border: 5px solid #000000;
         background-image: url('https://killionaire23.github.io/TMMobile/ResourceBackground.jpg');
         background-size: cover; /* Ensure the image covers the entire box */
         background-repeat: no-repeat;
@@ -115,7 +115,7 @@
         width: 100%;
         padding: 20px;
         font-size: 1.5em;
-        border: none;
+        border:5px solid;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
@@ -135,6 +135,7 @@
         flex: 1;
         padding: 15px;
         margin: 0 5px;
+        border: 5px solid;
         font-size: 1em;
         background-color: #e6e3e3;
         color: black;
@@ -156,7 +157,7 @@
         margin-top: 20px;
         padding: 10px;
         font-size: 1.2em;
-        border: none;
+        border:5px solid;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
