--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         width: 100%;
         padding: 20px;
         font-size: 1.5em;
-        border:5px solid;
+        border: none;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
         border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
     }
 
     /* Container for the 3 equal-sized resource buttons */
@@ -142,7 +142,7 @@
         border: none;
         border-radius: 10px;
         cursor: pointer;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
         transition: background-color 0.3s ease;
     }
 
@@ -157,12 +157,12 @@
         margin-top: 20px;
         padding: 10px;
         font-size: 1.2em;
-        border:5px solid;
+        border: none;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
         border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
     }
 </style>
 </head>
