--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         width: 100%;
         padding: 20px;
         font-size: 1.5em;
-        border: 3px solid #8f8f8f;
+        border: 1px solid #000000;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
@@ -135,7 +135,7 @@
         flex: 1;
         padding: 15px;
         margin: 0 5px;
-        border: 3px solid #8f8f8f;
+        border: 1px solid #000000;
         font-size: 1em;
         background-color: #e6e3e3;
         color: black;
@@ -156,7 +156,7 @@
         margin-top: 20px;
         padding: 10px;
         font-size: 1.2em;
-        border: 3px solid #8f8f8f;
+        border: 1px solid #000000;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
